# pyroscope

./: .air-test.conf  .air.conf  .dependency-cruiser.js  .docker-image-id-phlare  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gdb_history  .git-blame-ignore-revs  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .linelint.yml  .mockery.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pyroscope.yaml  .size-limit.js  .swcrc  .tool-versions  0_no_arena.txt  1_just_allocate_arena.txt  3_node.txt  4_nodes_slice.txt  5_cache_tree.txt  6_labels_cache_indices.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev-debian-latest-spies  Dockerfile.dev-ubuntu-latest-no-spies  Dockerfile.mac  Dockerfile.static-libs  (+59 more)
ebpf/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  dev.Dockerfile  go.mod  go.sum  loader_test.go  perf_event.go  profile_bpfeb.go  profile_bpfel.go  profile_bpfel_arm64.go  profile_bpfel_x86.go  pyperf.go  pyperf_bpfeb.go  pyperf_bpfel.go  pyperf_test.go  pyperf_version.go  python3_ebpf_expected.txt  python_ebpf_expected.txt  python_ebpf_expected_3.11.txt  python_ebpf_test.go  session.go  session_bpf_log.go  session_e2e_python_test.go  session_maps.go  session_parca.go  session_python.go  tmp.sh  todo.txt  vmrun.mk  vmrun.sh  vmrun_amd64.sh  vmrun_arm64.sh
ebpf/bpf/: .gitignore  Makefile  hash.h  pid.h  profile.bpf.c  profile.bpf.h  pthread.bpf.h  pthread_amd64.h  pthread_arm64.h  pyoffsets.h  pyperf.bpf.c  pyperf.bpf.h  pyperf.common.h  pyperf.h  pyperf.progs.template.h  pystr.h  pytypecheck.h  stacks.h  ume.h
ebpf/cpuonline/: cpuonline.go
ebpf/dwarfdump/: dwarfdump.go
ebpf/metrics/: metrics.go  python.go  symtab.go
ebpf/parca/: cpu.go  eventsreader.go  gen.go  maps.go  metrics.go  parcanative_bpfel_arm64.go  parcanative_bpfel_x86.go  parcapython_bpfel_arm64.go  parcapython_bpfel_x86.go  parcaruby_bpfel_arm64.go  parcaruby_bpfel_x86.go  shim.go
ebpf/pprof/: pprof.go  pprof_test.go
ebpf/pymemsampler/: .gitignore  CMakeLists.txt  library.c
ebpf/pyrobpf/: gen.go  profile_arm64_bpfel.go  profile_bpfel_arm64.go  profile_bpfel_x86.go  profile_x86_bpfel.go  sync.go
ebpf/python/: const_amd64.go  const_arm64.go  const_darwin_arm64.go  gen.go  glibc_offsets_gen_amd64.go  glibc_offsets_gen_arm64.go  glibc_offsets_gen_darwin_arm64.go  mem.go  musl_offsets_gen_amd64.go  musl_offsets_gen_arm64.go  musl_offsets_gen_darwin_arm64.go  perf.data.old  perf_arm64_bpfel.go  perf_bpfel_arm64.go  perf_bpfel_x86.go  perf_x86_bpfel.go  procinfo.go  procinfo_test.go  pyperf.go  pyperf_pid_data.go  pyperf_test.go  python_offsets_gen_amd64.go  python_offsets_gen_arm64.go  python_offsets_gen_darwin_arm64.go  python_offsets_rustdump_test.go  str.go  str_test.go  sync.go  tss.go  versions.go  versions_gen.go  versions_gen_amd64.go  versions_libc.go  versions_test.go  vm.go
ebpf/rlimit/: rlimit.go
ebpf/sd/: k8s.go  procfs.go  target.go  target_test.go
ebpf/symtab/: elf.go  elf_cache.go  elf_cache_test.go  elf_test.go  gcache.go  gcache_test.go  gosym.go  gosym_linux_test.go  kallsyms.go  kallsyms_test.go  metrics.go  perfmap.go  proc.go  proc_linux_test.go  proc_test.go  procmap.go  procmaps_test.go  stat_darwin.go  stat_linux.go  stat_placeholder.go  symbols.go  symtab.go  (+3 more)
(+7356 files in other folders)
