[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=0
debug = true
rpath = true 
lto = false
debug-assertions = true
codegen-units = 4

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pyroscope = { version = "2.0.0", features = ["backend-pprof-rs"] }
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
